@@ -1,6 +1,7 @@
 New in SVN (will be 0.12)
 -------------------------
 
+* Fixed Issue 140: html-like markup in titles was kept in the PDF TOC
 * For Issue 138: Redid figure styling. Also fixed bugs in BoxedContainer
 * Fixed Issue 137: bugs in escaping characters in interpreted roles
 * Make it work (in a slightly degraded mode) without PIL, as
